[package]
name = "pcap-converter"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
etherparse = "0.16.0"
pcap-parser = { version = "0.16.0", features = ["data"] }
chrono = "0.4.34"
domain = "0.10.3"
num-format = "0.4.4"
arrow = "53.2.0"
parquet = "53.2.0"
ntp-parser = "0.6.0"
rand = "0.8.5"
duckdb = { version = "1.1.1", features = ["bundled"] }
#duckdb = "1.0"
crossbeam = "0.8"
env_logger = "0.11.5"
log = "0.4.22"
serde_json = "1.0.132"
