[package]
name = "pcap-converter"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
etherparse = "0.16.0"
pcap-parser = { version = "0.16.0", features = ["data"] }
chrono = "0.4.39"
domain = "0.10.3"
num-format = "0.4.4"
arrow = "54.0.0"
parquet = "54.0.0"
ntp-parser = "0.6.0"
rand = "0.8"
duckdb = { version = "1.1.1", features = ["bundled"] }
#duckdb = "1.0"
crossbeam = "0.8"
# env_logger = "0.11.5"
log = "0.4.25"
serde_json = "1.0.138"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
